# sw-maintainer-agent

./: .gitignore  README.md  install-or-update-windows.cmd  pyproject.toml  uninstall-windows.cmd
assets/: maintain.ico.b64
launchers/: maintain.cmd  maintain.command
scripts/: install-windows.ps1  uninstall-windows.ps1
src/maintain/: __init__.py  __main__.py  audit.py  cli.py  config.py  context.py  engine.py  errors.py  exchange_package.py  locking.py  migration.py  models.py  policy.py  presenter.py  provider_factory.py  repository_memory.py  runner.py  security.py  workspace.py
src/maintain/providers/: __init__.py  base.py  browser.py  codex.py  command.py  openai.py
