[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sw-maintainer-agent"
version = "0.7.0"
description = "Auditable, provider-neutral software maintenance workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["rich>=13.9,<15"]
keywords = ["ai", "cli", "copilot", "maintenance", "software-engineering"]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
browser = ["playwright>=1.52,<2"]

[project.scripts]
maintain = "maintain.cli:main"

[project.urls]
Repository = "https://github.com/tim-a-wood/sw-maintainer-agent"

[tool.setuptools.packages.find]
where = ["src"]
